# noveum-trace

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_SUMMARY.md  REVIEW_AND_RECOMMENDATIONS.md  TRACING_SETUP_ANALYSIS.md  collected_logs.md  conversation_context.json  debug_async_threading.py  debug_callback_not_firing.py  debug_exo_venv.py  debug_handler_context_issue.py  debug_langchain_threading.py  debug_real_scenario.py  debug_streaming_batch.py  debug_thread_propagation.py  debug_your_code.py  default_env.txt  final_validation.py  get_traces.py  integrate_novatrace_and_langchain.md  livekit_system_prompt_tracing.md  noveum_env.txt  pyproject.toml  sample_trace.json  setup.py  setup_dev.py  simple_trace_test.py  test_call_site_tracking.py  test_memory_cleanup.py  test_trace_functionality.py  wealthink-research-automation-v0_testing_traces.json
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  release.yml  tests.yml
audio_spike/: Untitled
chatbot_traces/: traces_20250715_080304_0000.jsonl
chroma_db/: chroma.sqlite3
docs/: CREWAI_INTEGRATION.md  LANGCHAIN_INTEGRATION.md  LIVEKIT_INTEGRATION_GUIDE.md  PACKAGE_SUMMARY.md  PIPECAT_CUSTOM_SPANS.md  PIPECAT_CUSTOM_TRANSPORTS.md  PIPECAT_INTEGRATION_GUIDE.md  PIPECAT_RAW_INPUT_AUDIO_CAPTURE.md  PROJECT_SUMMARY.md  README.md  langchain_code_tracing_explained.md  langchain_code_tracing_visual_guide.md  track_details.md
docs/examples/: agent_cleanup_example.py  agent_example.py  agent_workflow_example.py  basic_usage.py  compare_otel_vs_noveum.py  comprehensive_tool_calling_examples.py  comprehensive_tool_calling_guide.py  crewai_e2e_test.py  find_lcel_based_agents.py  flexible_tracing_example.py  guard_crewai_example.py  guard_generic_example.py  image_example.py  langchain_agent_chain_tool_example.py  langchain_custom_parent_example.py  langchain_integration_example.py  langchain_langgraph_tool_attach.py  langchain_lcel_based_agents.py  langchain_legacy_api_example.py  langchain_long_conversation_example.py  langchain_name_reuse_example.py  langgraph_agent_chain_tool_example.py  langgraph_agent_example.py  langgraph_asynchronous_execution.py  langgraph_chain_multi_tool_example.py  langgraph_custom_parent_example.py  langgraph_custom_parent_prioritized_example.py  langgraph_routing_example.py  livekit_integration_example.py  mixed_tracing_example.py  multimodal_examples.py  pipecat_integration_cekura.py  pipecat_integration_example.py  pipecat_integration_example_v2.py  pipecat_task_cancel_race_condition.py  span_attributes_demo.py  streaming_example.py  thread_example.py
docs/getting-started/: installation.md  quickstart.md
docs/guides/: FLEXIBLE_TRACING_APPROACHES.md  configuration.md  llm-tracing.md  multi-agent-tracing.md  simplified-decorators.md
docs/specifications/: MULTIMODAL_EXTENSION_SPECIFICATION.md  NOVEUM_API_BACKEND_SPECIFICATION.md  SDK_IMPROVEMENTS_CHECKLIST.md
examples/: agent_example.py  agent_workflow_example.py  basic_usage.py  chatbot_example.py  code_generation_example.py  complete_example.py  comprehensive_example.py  custom_headers_example.py  document_processing_example.py  flexible_tracing_example.py  langchain_integration_example.py  llm_auto_instrumentation.py  multi_agent_chatbot.py  multimodal_examples.py  simple_decorators_demo.py  simple_initialization.py  streaming_example.py  thread_example.py
examples/notebooks/: demo_noveum_trace.ipynb
langchain_agent/: README.md  __init__.py  agent.py  conversation_context.json  requirements.txt  simple_example.py
langchain_agent/chroma_db/: chroma.sqlite3
langchain_agent/docs/: sample_document.txt
langchain_agent/traces/: combine_spans.py  dataset.json  network_call.json  trace1.json  (+8 more)
llm_traces/: traces_20250715_074930_0000.jsonl
project_traces/: traces_20250715_081331_0000.jsonl  traces_20250715_081404_0000.jsonl
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_config_merge.py  test_endpoint_configuration.py  test_openai_integration.py
(+254 files in other folders)
